
add_subdirectory(interfaces)

# add_subdirectory(protocols/canopen)
add_subdirectory(protocols/i2c_master)
add_subdirectory(protocols/spi_master)

# add_subdirectory(devices/adc/ltc2471)

# add_subdirectory(devices/dac/dac8565)

# add_subdirectory(devices/memory/fram)

# add_subdirectory(device/humidity/sht30)

# add_subdirectory(devices/temperature/lm73)
# add_subdirectory(devices/temperature/tmp468)

add_subdirectory(devices/proximity/vcnl4040)

# add_subdirectory(devices/display/ssd1306)

