
# ADC
# add_subdirectory(adc/ltc2471)

# DAC
# add_subdirectory(dac/dac8565)

# Memory
# add_subdirectory(memory/fram)

# Humidity
# add_subdirectory(humidity/sht30)

# Temperature
# add_subdirectory(temperature/lm73)
# add_subdirectory(temperature/tmp468)

# Proximity
# add_subdirectory(devices/proximity/vcnl4040)

# Display
# add_subdirectory(devices/display/ssd1306)