
# ADC
add_subdirectory(adc/ltc2471)

# Airquality
# add_subdirectory(air_quality/ccs811)

# DAC
# add_subdirectory(dac/dac8565)

# Display
# add_subdirectory(devices/display/ssd1306)

# Gesture
# add_subdirectory(gesture/mpr121)
# add_subdirectory(gesture/apds9960)

# Humidity
add_subdirectory(humidity/sht30)
# add_subdirectory(humidity/hts221)

# Inertial_module
# add_subdirectory(inertial_module/lsm9ds1)

# Memory
add_subdirectory(memory/fram)

# Pressure
# add_subdirectory(pressure/lps22hb)

# Proximity
# add_subdirectory(proximity/vcnl4040)

# Pulseoximeter
# add_subdirectory(pulseoximeter/max30100)

# RTC
# add_subdirectory(rtc/ds3232m)

# Temperature
add_subdirectory(temperature/lm73)
# add_subdirectory(temperature/tmp468)

